@@ -34,7 +34,7 @@
   <drop css:theme-children="body"/>
   <before css:theme-children="body" css:content-children="body"/>
   <after css:theme-children="body">
-      <script src="++theme++bootstrap-framework/js/bootstrap.min.js"></script>
+    <script src="{$base}/++theme++bootstrap-framework/js/bootstrap.min.js"></script>
   </after>
   
 </rules>
