@@ -32,15 +32,17 @@
 
   <!-- Scripts -->
   <after css:theme-children="head" css:content="head script"/>
+
+  <!-- Rework html5shiv URL into conditional comment in output -->
   <replace theme="//comment()[contains(.,'html5shiv.js')]">
-    <!--[if gt IE 9]>
-        <script src="++theme++bootstrap-framework/js/html5shiv.js"></script>
-    <![endif]-->
+    <xsl:comment>[if gt IE 9]&gt;
+      <xsl:value-of select="concat('&lt;script src=&quot;', $base, '/++theme++bootstrap-framework/js/html5shiv.js&quot;&gt;&lt;/script&gt;')" />
+    &lt;![endif]</xsl:comment>
   </replace>
 
   <!-- Links -->
   <replace css:theme="link[href*='bootstrap-responsive.css']">
-      <link href="++theme++bootstrap-framework/css/bootstrap-responsive.min.css" rel="stylesheet"/>
+    <link href="{$base}/++theme++bootstrap-framework/css/bootstrap-responsive.min.css" rel="stylesheet"/>
   </replace> 
   <replace css:theme="link[rel='shortcut icon']" css:content="link[rel='shortcut icon']" />
   <after css:theme="link[rel='shortcut icon']" css:content="link[rel='apple-touch-icon']" />
